# auto-tuning-test

./: .gitignore  README.md
ad_autotune/: CMakeLists.txt  PROGRESS.md  README.md  package.xml
ad_autotune/paths/: kcity_2025_ds.csv  oval_track.csv  tight_track.csv
ad_autotune/results/: kcity_2025_ds_best_traj.csv  live_trials.csv  oval_best_traj.csv  recorded_path_best_traj.csv  tight_best_traj.csv  trials.csv  tuned_params.yaml
ad_autotune/scripts/: ab_core.py  ad_control.py  auto_tune_ab.py  auto_tune_live.py  autotune.py  autotune_core.py  demo.sh  ego_pose_bridge.py  live_drive.py  live_runner.py  make_test_bag.py  primer.py  record_path.py  reset_ego.py  run_ab_balanced.sh  run_ab_forever.sh  run_live_tuning.py  start_stack.sh  test_autotune.py  tracker_first_drive.py  tracker_runner.py
ad_autotune/tests/: test_ab_core.py  test_auto_tune_ab.py  test_live_runner_import.py  test_preflight.py  test_tracker_runner.py  test_wait_for_sim.py
ad_lidar_bringup/: CMakeLists.txt  package.xml
ad_lidar_bringup/launch/: lidar.launch
ad_metric/: CMakeLists.txt  package.xml
ad_metric/scripts/: calc_metric.py  competition_score.py
ad_pose_parser/: CMakeLists.txt  package.xml
ad_pose_parser/include/ad_pose_parser/: pose_parser.h
ad_pose_parser/launch/: ad_pose_parser.launch
ad_pose_parser/src/ad_pose_parser/: main.cpp  pose_parser.cpp
ad_tf2_broadcaster/: CMakeLists.txt  package.xml
ad_tf2_broadcaster/config/: frame.yaml
ad_tf2_broadcaster/include/ad_tf2_broadcaster/: tf2_broadcaster.h
ad_tf2_broadcaster/include/ad_tf2_static_broadcaster/: tf2_static_broadcaster.h
ad_tf2_broadcaster/launch/: ad_tf2_broadcast.launch
ad_tf2_broadcaster/src/ad_tf2_broadcaster/: main.cpp  tf2_broadcaster.cpp
ad_tf2_broadcaster/src/ad_tf2_static_broadcaster/: main.cpp  tf2_static_broadcaster.cpp
ad_tracker/: CMakeLists.txt  package.xml
ad_tracker/csv/: global_path.csv  global_path_2025.csv
ad_tracker/include/ad_tracker/: gps_tracker.h
ad_tracker/launch/: ad_tracker.launch
ad_tracker/src/: ad_tracker_node.cpp  gps_tracker.cpp
ad_udp/: CMakeLists.txt  package.xml
ad_udp/launch/: ad_bringup.launch  udp_bridge.launch
ad_udp/lib/define/: Camera.py  CollisionData.py  EgoCtrlCmd.py  EgoGhostCtrlCmd.py  EgoVehicleStatus.py  GPS.py  GetIntersectionStatus.py  GetTrafficLightStatus.py  IMU.py  Lidar_2D.py  MultiEgoSetting.py  NpcGhostMode.py  NpcVehicleCollisionData.py  ObjectInfo.py  SaveSensorData.py  ScenarioLoad.py  SensorControl.py  SetIntersectionStatus.py  SetTrafficLightCtrl.py  TurnSignalLampControl.py  base.py  type.py
ad_udp/lib/network/: UDP.py  __init__.py
ad_udp/src/: EgoVehicleStatus.py  MoraiCmdController.py  ros2udp.py  udp2ros.py
docs/: 2026-07-02-optuna-ab-design.md  2026-07-02-optuna-ab-gp-tpe.md
