<?xml version="1.0"?>
<!-- [transferable-to-heven_ad] -->
<package format="2">
  <name>ad_tracker</name>
  <version>0.0.1</version>
  <description>Path tracker for global waypoint following.</description>
  <maintainer email="heven@todo.todo">heven</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>morai_msgs</depend>
</package>
